append customer name, total price columns in search_payment.html

--- a/branches/nick/kernal/search.html
+++ b/branches/nick/kernal/search.html
@@ -33,7 +33,7 @@
             </label>  
             <input type="text" name="item" value="" id="item" size="40" onclick="return false;"/>
 {% endblock %}		  			
-          <table id="register">  
+          <table id="register" style="width: 800px">  
 {% block table_head %}		  
             <thead>  
               <tr>  
