--- a/branches/caracc/kernal/stock_take.html
+++ b/branches/caracc/kernal/stock_take.html
@@ -44,6 +44,15 @@
                   <td>{{value.6}}</td>
               </tr>  			
 			{%endfor%}
+              <tr>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                  <td>{{total_qty}}</td>
+                  <td>{{total_on_hand_value}}</td>
+              </tr>  			            
             </tbody>  	
           </table>  
         </div>  
