Details: ======== add simpack function

--- a/branches/refactory-1.0/kernal/stock.html
+++ b/branches/refactory-1.0/kernal/stock.html
@@ -28,6 +28,7 @@
             <li><a href="/report/pawning_stock/filter">Pawning</a></li>
 			<li><a href="/stock/adjust/">Stock Adjust</a></li>
             <li><a href="/report/inventory/filter/">Inventory Receipt Report</a></li>
+			<li><a href="/report/simpack/filter/">SimPack</a></li>
          </ol>
       </li>
       <li>Consignment InStock
