fix display bug for report_item_sales.html

--- a/branches/refactory-1.0/kernal/report_item_sales.html
+++ b/branches/refactory-1.0/kernal/report_item_sales.html
@@ -74,7 +74,7 @@
             </tbody>  	
           
 		  {% endfor %}
-         <tr> <td>Total</td><td>{{total_quantity}}</td><td></td> {{total_unit_sell_price}}(?)<td> {{total_cost}}</td><td>{{total_amount}}</td>   <td>{{total_profit}}</td> <td></td> </tr>
+         <tr> <td>Total</td><td>{{total_quantity}}</td><td></td> <td> {{total_cost}}</td><td>{{total_amount}}</td>   <td>{{total_profit}}</td> <td></td> </tr>
 
           </table>  
         </div>  
