append Amount Tendered check before sales confirm

--- a/branches/refactory-1.0/kernal/sales_base.html
+++ b/branches/refactory-1.0/kernal/sales_base.html
@@ -311,6 +311,11 @@
 			}
 		}
         
+        if ($("#change").val() < 0){
+                reject = true;
+                reject_msg += "Amount Tendered Invalid \n";             
+        }
+        
         if (reject){
             alert(reject_msg);
             return;
