--- a/branches/refactory-1.0/kernal/report_item_sales.html
+++ b/branches/refactory-1.0/kernal/report_item_sales.html
@@ -67,7 +67,7 @@
 					{% if forloop.counter == 1%}
 						<tr class="summary"><td>{{outStockRecord.product.name}}</td><td>{{outStockRecord.quantity}}</td> <td> {{outStockRecord.unit_sell_price}}</td> <td>{{outStockRecord.cost}}</td> <td>{{outStockRecord.amount}}</td>  <td>{{outStockRecord.profit}}</td> </tr>
 					{% else %}
-						<tr class="detail"><td>{{outStockRecord.product.name}}</td><td>{{outStockRecord.quantity}}</td><td>{{outStockRecord.unit_sell_price}}</td> <td>{{outStockRecord.cost}}</td><td>{{outStockRecord.amount}}</td>   <td>{{outStockRecord.profit}}</td> <td>{{outStockRecord.bill.sales_by}}</td> </tr>
+						<tr class="detail"><td>{{outStockRecord.product.name}} ({{outStockRecord.serial_no.serial_no}})</td><td>{{outStockRecord.quantity}}</td><td>{{outStockRecord.unit_sell_price}}</td> <td>{{outStockRecord.cost}}</td><td>{{outStockRecord.amount}}</td>   <td>{{outStockRecord.profit}}</td> <td>{{outStockRecord.bill.sales_by}}</td> </tr>
 					{% endif %}
 				{%endfor%}
 			{%endfor%}
