--- a/branches/refactory-1.0/kernal/sales_base.html
+++ b/branches/refactory-1.0/kernal/sales_base.html
@@ -294,6 +294,25 @@
         reject_msg = "";
         if(_checkInputData() == false){ return; }
 		var msg = '';
+        var code = new Array();
+        for(var pk in productTable){
+            product_name = productTable[pk].fields.name
+            if( "imei" in productTable[pk]){
+                product_name = productTable[pk].imei
+            }        
+            qty = parseInt($("#"+pk+"_quantity").val())
+            pk = pk.split('RANDOM')[0]
+            if (code[pk] == undefined){
+                code[pk] = 0
+            }
+            code[pk] += qty
+                    
+            if(code[pk] >  productTable[pk].fields.stockCount){
+                reject = true;
+                reject_msg += "Product: '" + product_name + "' only '"+productTable[pk].fields.stockCount+"' item in hand \n"; 
+            }
+            
+        }
 		for(var pk in productTable){
             product_name = productTable[pk].fields.name
             if( "imei" in productTable[pk]){
