--- a/kernal/report.html
+++ b/kernal/report.html
@@ -46,6 +46,7 @@
          <ol>
             <li><a href="/search/gadai">Pawning Report</a></li>
             <li><a href="/search/void_bill/">Void Bill Report</a></li>
+            <li><a href="/search/adjust_stock/">Adjust Stock Report</a></li>
             <li><a href="/search/close_counter/">Daily Counter Report</a></li>
             <li><a href="/search/service/">Service Report</a></li>
             
