--- a/kernal/inventory_base.html
+++ b/kernal/inventory_base.html
@@ -130,7 +130,7 @@
 									"<td id=\""+pk+"_productName\">"+data.fields.name+" <br/> [<span id=\""+pk+"_stockCount\"></span> in stock]</td>"+
 									"<td><input type=\"text\" name=\""+pk+"_cost\" id=\""+pk+"_cost\" value=\""+data.fields.cost+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') /></td>"+
 									"<td><input type=\"text\" name=\""+pk+"_quantity\" id=\""+pk+"_quantity\" value=\"1\" size=\"2\"  onkeyup=recalcAll('"+pk+"') onChange=resetQuantityField('"+pk+"') /></td>"+
-									"<td><a href=\"#\" class='totalPrice' onclick=\"buildSerialNo("+pk+");return false;\">optional</a></td>"+
+									"<td><a href=\"#\" class='totalPrice' onclick=\"buildSerialNo('"+pk+"');return false;\">optional</a></td>"+
 									"</tr>"+
 									"<tr id=\""+pk+"_serial_tr\" >"+
 									"<td colspan=5 id=\""+pk+"_serial_td\" style='display: none'><div id=\""+pk+"_serial\" ></div></td>"+
