fix bug: sales lower cost compare function

--- a/branches/refactory-1.0/kernal/stock_base.html
+++ b/branches/refactory-1.0/kernal/stock_base.html
@@ -279,6 +279,7 @@
                     pk_cost = "#"+pk+"_avgcost";
                   }
                   $(pk_cost).html(data[0].Cost);
+                  productTable[pk].fields.cost = data[0].Cost
             },
             error: function(data){ 
                 alert("Product Not found! please check your query: " + $("#item").val()) 
