--- a/branches/nick/kernal/sales_base.html
+++ b/branches/nick/kernal/sales_base.html
@@ -296,7 +296,7 @@
 					"<td><a href='#' id='removeItem' onclick=\"removeItem('"+pk+"')\"><img src='/static/images/delete.png' /></a> "+data.fields.barcode+"</td>"+
 					"<td id=\""+pk+"_productName\">["+data.fields.name +"] "+data.fields.description + IMEI_str +"</td>"+    <!-- [<span id=\""+pk+"_stockCount\"></span> in stock]</td>  for batch \ only-->
 					"<td id=\""+pk+"_avgcost\">"+data.fields.cost+"</td>"+
-                    "<td><input type=\"text\" name=\""+pk+"_extracost\" id=\""+pk+"_extracost\" value=\"0\" size=\"6\" /></td>"+
+                    "<td><input type=\"text\" name=\""+pk+"_extracost\" id=\""+pk+"_extracost\" value=\"0\" size=\"6\" onChange=checkInput('"+pk+"') /></td>"+
                     "<td><input type=\"text\" name=\""+pk+"_price\" id=\""+pk+"_price\" value=\""+data.fields.retail_price+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') onblur=lowerCostDetact('"+pk+"'); /></td>"+
 					"<td><input type=\"text\" name=\""+pk+"_quantity\" id=\""+pk+"_quantity\" value=\"1\" size=\"2\"  onkeyup=recalcAll('"+pk+"') onChange=resetQuantityField('"+pk+"') /></td>"+
 					"<td>$<span id=\""+pk+"_amount\" class='totalPrice'>"+data.fields.retail_price+"</span><input type=\"hidden\" name=\""+pk+"_pk\" id=\""+pk+"_pk\" value=\""+data.pk+"\" /></td>"+
