fix bug: change InStock and OutStock http method to POST

--- a/branches/nick/kernal/inventory_form2.html
+++ b/branches/nick/kernal/inventory_form2.html
@@ -6,7 +6,7 @@
 <style type=text/css">
 
 </style>
-<form action="/inventory/confirm" method="get" id="sales">
+<form action="/inventory/confirm/" method="get" id="sales">
 <div id="content_area_wrapper">  
       <div id="content_area">  
         <div id="page_title" style="margin-bottom:8px;">Items Receiving
