--- a/branches/nick/kernal/sales_base - Copy.html
+++ b/branches/nick/kernal/sales_base - Copy.html
@@ -18,7 +18,7 @@
 }
 
 </style>
-<form action="/sales/confirm" method="get" id="sales">
+<form action="/sales/confirm/" method="get" id="sales">
 <div id="content_area_wrapper">  
       <div id="content_area">  
         <div id="page_title" style="margin-bottom:8px;">{{title}}
