--- a/branches/nick/kernal/stock_take.html
+++ b/branches/nick/kernal/stock_take.html
@@ -5,13 +5,51 @@
 .innertable {
 	display: none;
 }
+
+#CompanyProfile{
+	text-align: left;
+}
+
+#CompanyProfile .logo{
+	float: left;
+    margin: 0 2em 0 0;    
+}
+.logo img{
+	width: 150px;
+	height:  150px;
+}
+
+
+
+
+#CompanyProfile .company{
+	font-size: 22pt;
+}
+
+#CompanyProfile .address{
+	font-size: 12pt;
+}
+
+#CompanyProfile .contect span{
+	font-size: 12pt;
+	margin: 0 1.5em 0 0;
+}
 </style> 
 	<div id="content_area_wrapper">  
       <div id="content_area">  
+						<div id="CompanyProfile">
+							<div class="logo"><img src="/{{company.logo}}"/></div>
+							<div class="company">{{company.name}}</div>
+							<div class="address">{{company.address}}</div>
+							<div class="contect"><span>TEL: {{company.phone_office}}</span><span> FAX: {{company.fax}} </span><span>EMAIL: {{company.email}}</span></div>
+                            <p/>
+                            <hr/>
+						</div>
+      
+      
         <div id="page_title" style="margin-bottom:8px;"><h1>STOCK BALANCE</h1>
         </div>  
-        <div id="page_subtitle" style="margin-bottom:8px;">{{dateRange}}
-        </div>  
+        <div id="page_subtitle" style="margin-bottom:8px;text-align: right;font-weight: bolder; font-size: 10pt">{{dateRange}}</div>  
         <div id="table_holder">  	
           <table class="tablesorter report" id="sortable_table">  		
             <thead>  			
