fix bug: take off sales trad-in choose.

--- a/branches/nick/kernal/sales_base.html
+++ b/branches/nick/kernal/sales_base.html
@@ -18,8 +18,9 @@
             <select name="mode" id="mode" onchange="$('#mode_form').submit();">  
               <option value="cash" selected="selected">Sale
               </option>  
+              <!--
               <option value="trade-in">Trade-in
-              </option>  			  
+              </option>  			  -->
               <option value="warranty">Warranty
               </option>  
               <option value="pawning">Pawning
