append feature: product trace refactory daily sales report append Trade-in and Pawning fix bug: enable stocktake  filter by date function

--- a/branches/nick/kernal/product_list.html
+++ b/branches/nick/kernal/product_list.html
@@ -178,7 +178,7 @@
     
             <div id="" class="span-24" style="border-bottom:1px solid gray;">
                 <div class="span-5">
-                    <input name="delete_product[]" value="{{product.name}}" type="checkbox"/>{{product.name}}
+                    <input name="delete_product[]" value="{{product.name}}" type="checkbox"/><a href='/product/trace/{{product.pk}}'>{{product.name}}</a>
                 </div>
 
                 <div class="span-3">
