refactory: block foc-product js logic in sales_base.html (ANNIE Version ONLY)

--- a/branches/refactory-1.0/kernal/sales_base.html
+++ b/branches/refactory-1.0/kernal/sales_base.html
@@ -11,6 +11,10 @@
         </div>  
 {% endblock %}
 
+{% block foc_algo %}
+
+{% endblock %}  
+
 {% block mode_form %}
           <div id="mode_form">
             <span>Register Mode
