append transfer function

--- a/branches/refactory-1.0/kernal/report.html
+++ b/branches/refactory-1.0/kernal/report.html
@@ -49,6 +49,8 @@
             <li><a href="/search/adjust_stock/">Adjust Stock Report</a></li>
             <li><a href="/search/close_counter/">Daily Counter Report</a></li>
             <li><a href="/search/service/">Service Report</a></li>
+            <li><a href="/search/transfer/instock/">Transfer InStock Report</a></li>
+            <li><a href="/search/transfer/outstock/">Transfer OutStock Report</a></li>
             
          </ol>
       </li>   
