--- a/branches/refactory-1.0/kernal/sales_base.html
+++ b/branches/refactory-1.0/kernal/sales_base.html
@@ -29,6 +29,8 @@
               </option>  
               <option value="pawning">Pawning
               </option> 
+              <option value="transfer">Transfer
+              </option>               
             </select>
           </div>  
 {% endblock %}
