--- a/kernal/stock.html
+++ b/kernal/stock.html
@@ -22,23 +22,27 @@
       <li>Stock Control
          <ol>
             <li><a href="/inventory/list/">Receiving Stock</a></li>
-            <li><a href="/report/stocktake/filter">Stock Take</a></li>
+            <li><a href="/report/stocktake/filter/">Stock Take</a></li>
+            <li><a href="/report/newhp_stock/filter/">New Hp</a></li>
+            <li><a href="/report/2ndhp_stock/filter/">2nd Hp</a></li>
+            <li><a href="/report/pawning_stock/filter/">Pawning</a></li>
 			<li><a href="/stock/adjust/">Stock Adjust</a></li>
             <li><a href="/report/inventory/filter/">Inventory Receipt Report</a></li>
+			<li><a href="/report/simpack/filter/">SimPack</a></li>
          </ol>
       </li>
       <li>Consignment InStock
          <ol>
 			<li><a href="/consignment/in/">InStock Received</a></li>
-			<li><a href="/consignment/in/balance">InStock Return Issue</a></li>
+			<li><a href="/consignment/in/balance/">InStock Return Issue</a></li>
             <li><a href="/report/consignment/in/balance/filter/">InStock Report</a></li>            
          </ol>
       </li>	  
       <li>Consignment OutStock
          <ol>
 			<li><a href="/consignment/out/">OutStock Issue</a></li>
-            <li><a href="/consignment/out/balance">OutStock Balance</a></li>                        
-			<li><a href="/consignment/out/sales">OutStock Sales Issue</a></li>
+            <li><a href="/consignment/out/balance/">OutStock Balance</a></li>                        
+			<li><a href="/consignment/out/sales/">OutStock Sales Issue</a></li>
             <li><a href="/report/consignment/out/balance/filter/">OutStock Report</a></li>
          </ol>
       </li>	        
