--- a/kernal/inventory_base.html
+++ b/kernal/inventory_base.html
@@ -12,7 +12,11 @@
         </div>  
 {% endblock %}
 
+{% block foc_algo %}
+{% endblock %} 
+
 {% block mode_form %}
+		  <div id="error_msg">{{msg}}</div>
           <div id="mode_form">
             <span>Receiving Mode
             </span>  
@@ -22,7 +26,11 @@
 			  <option value="trade-in">Trade-in
               </option>  			  
               <option value="warranty">Warranty
-              </option>  
+              </option>
+              <option value="pawning">Pawning
+              </option>                
+              <option value="transfer">Transfer
+              </option>                             
             </select>
           </div>   
 {% endblock %}
@@ -125,9 +133,9 @@
 									"<tr id=\""+pk+"_tr\">"+
 									"<td><a href='#' id='removeItem' onclick=removeItem('"+pk+"')><img src='/static/images/delete.png' /></a> "+data.fields.barcode+"</td>"+
 									"<td id=\""+pk+"_productName\">"+data.fields.name+" <br/> [<span id=\""+pk+"_stockCount\"></span> in stock]</td>"+
-									"<td><input type=\"text\" name=\""+pk+"_cost\" id=\""+pk+"_cost\" value=\""+data.fields.cost+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') /></td>"+
+									"<td><input type=\"text\" name=\""+pk+"_cost\" id=\""+pk+"_cost\" value=\""+data.fields.cost+"\" size=\"6\" onkeyup=recalcAll('"+pk+"') onChange=checkInput('"+pk+"') /></td>"+
 									"<td><input type=\"text\" name=\""+pk+"_quantity\" id=\""+pk+"_quantity\" value=\"1\" size=\"2\"  onkeyup=recalcAll('"+pk+"') onChange=resetQuantityField('"+pk+"') /></td>"+
-									"<td><a href=\"#\" class='totalPrice' onclick=\"buildSerialNo("+pk+");return false;\">optional</a></td>"+
+									"<td><a href=\"#\" class='totalPrice' onclick=\"buildSerialNo('"+pk+"');return false;\">optional</a></td>"+
 									"</tr>"+
 									"<tr id=\""+pk+"_serial_tr\" >"+
 									"<td colspan=5 id=\""+pk+"_serial_td\" style='display: none'><div id=\""+pk+"_serial\" ></div></td>"+
